2006-01-22 Braden McDaniel  <braden@endoframe.com>

	* mozilla-plugin/src/openvrml-player/gtkglviewer.cpp: Disambiguate
	externally linked functions by prefixing with "gtk_gl_viewer_".

2006-01-22 Braden McDaniel  <braden@endoframe.com>

	* mozilla-plugin/src/openvrml-player/command_istream.cpp: Handle
	EOF from the command_channel by inserting traits_type::eof() into
	the stream buffer.

2006-01-21 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/browser.cpp: Doc-comment improvements.

2006-01-14 Braden McDaniel  <braden@endoframe.com>

	Added missing OPENVRML_LOCAL.

	* src/libopenvrml/openvrml/browser.cpp
	(openvrml::scene::load_scene): Added OPENVRML_LOCAL to definition.
	* src/libopenvrml/openvrml/browser.h
	(openvrml::browser::node_class_map): Added OPENVRML_LOCAL to
	definition.

2006-01-13 Braden McDaniel  <braden@endoframe.com>

	Allow openvrml::browser and openvrml::scene to be set directly
	from a resource_istream.  Added a thread to openvrml-player
	specifically to process input from the command channel.  This
	resolves issues with the plug-in deadlocking when the main thread
	becomes blocked.

	* mozilla-plugin/src/openvrml-player/browser.cpp
	(openvrml_player::browser::do_get_resource(const std::string &)):
	Changed plugin_resource_istream constructor to use
	uninitialized_plugin_streambuf_map_.
	* mozilla-plugin/src/openvrml-player/player.cpp
	(initial_stream_uri): Identifier for the plugin_streambuf to be
	used for the initial stream.
	(openvrml_player::command_istream_reader::operator()() const):
	Added nothrow exception specification; changed to use
	uninitialized_plugin_streambuf_map_; removed call to
	openvrml::browser::world_url; changed call to
	plugin_streambuf::init to include stream_id and url arguments.
	(initial_stream_reader::operator()() const): Added nothrow
	exception specification; changed plugin_istream to inherit
	openvrml::resource_istream instead of std::istream; call
	openvrml::browser::set_world.